k8s/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: web-service
  namespace: default

spec:
  type: ClusterIP

  selector:
    app: web

  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
